crates/plotnik-lib/tests/02-parser/recovery_unexpected/predicate_eq_suggests_string_equality.txt
Q = #eq?
==== diagnostics ====
error: tree-sitter predicates are not supported
 --> query.ptk:1:5
  |
1 | Q = #eq?
  |     ^^^^
  |
help: use `(node == "x")`
